added images and styles file

--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>my 2nd github repo</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <h2>my 2nd github repo</h2>
-    
+    <div>
+        <img src="" alt="">
+    </div>
 </body>
 </html>
