--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>my 2nd github repo</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
     <h2>my 2nd github repo</h2>
     <div>
-        <img src="" alt="">
+        <img src="Images/pic1 (1).jpg" alt="">
+        <img src="Images/pic2.jpg" alt="">
     </div>
 </body>
 </html>
