--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <div>
         <img src="Images/pic1 (1).jpg" alt="">
         <img src="Images/pic2.jpg" alt="">
+        <img src="Images/pic3.jpg" alt="">
     </div>
 </body>
 </html>
